@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python: ["3.7", "3.8", "3.9", "3.10" ]
     runs-on: ${{ matrix.os }}
     env:
